force-app/main/default/objects/Account/fields/Porc_Apor_SSoc_Empleador_Mater__c.field-meta.xml
<CustomField>
    <fullName>Porc_Apor_SSoc_Empleador_Mater__c</fullName>
    <label>Porc Apor SSoc Empleador Mater</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>