force-app/main/default/objects/Account/fields/Porcentaje_de_Aportaciones_Reserva_Labor__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_de_Aportaciones_Reserva_Labor__c</fullName>
    <label>Porcentaje de Aportaciones Reserva Labor</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>