force-app/main/default/objects/Account/fields/Primer_Aporte__c.field-meta.xml
<CustomField>
    <fullName>Primer_Aporte__c</fullName>
    <label>Primer Aporte</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>