force-app/main/default/objects/Account/fields/Primer_Nombre_Representante__c.field-meta.xml
<CustomField>
    <fullName>Primer_Nombre_Representante__c</fullName>
    <label>Primer Nombre Representante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>