force-app/main/default/objects/Account/fields/Profesi_n_Ocupaci_n__c.field-meta.xml
<CustomField>
    <fullName>Profesi_n_Ocupaci_n__c</fullName>
    <label>Profesión / Ocupación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>ABOGADO (A)</label>
            </value>
            <value>
                <fullName>100</fullName>
                <label>ACTOR</label>
            </value>
            <value>
                <fullName>101</fullName>
                <label>ACTRIZ</label>
            </value>
            <value>
                <fullName>102</fullName>
                <label>ACTUARIO</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>ACUICULTOR</label>
            </value>
            <value>
                <fullName>103</fullName>
                <label>ADMINISTRADOR DE EMPRESAS</label>
            </value>
            <value>
                <fullName>104</fullName>
                <label>AEROMOZA (O)</label>
            </value>
            <value>
                <fullName>105</fullName>
                <label>AFORADOR (A)</label>
            </value>
            <value>
                <fullName>106</fullName>
                <label>AGENTE ADUANERO</label>
            </value>
            <value>
                <fullName>107</fullName>
                <label>AGENTE DE INVESTIGACION</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>AGENTE DE SEGURIDAD</label>
            </value>
            <value>
                <fullName>108</fullName>
                <label>AGENTE DE VIAJE</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>AGENTE INMOBILIARIO</label>
            </value>
            <value>
                <fullName>109</fullName>
                <label>AGREGADO CULTURAL</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>AGRICULTOR</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>AGRONOMO</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>ALBAÑIL</label>
            </value>
            <value>
                <fullName>110</fullName>
                <label>ALCALDE</label>
            </value>
            <value>
                <fullName>111</fullName>
                <label>ALFARERO</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>AMA DE CASA</label>
            </value>
            <value>
                <fullName>112</fullName>
                <label>ANALISTA</label>
            </value>
            <value>
                <fullName>113</fullName>
                <label>ANTROPOLOGO (A)</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>APICULTOR</label>
            </value>
            <value>
                <fullName>114</fullName>
                <label>ARBITRO</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>ARMERO (PARA ARMAS)</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>ARQUITECTO (A)</label>
            </value>
            <value>
                <fullName>115</fullName>
                <label>ARTESANO</label>
            </value>
            <value>
                <fullName>116</fullName>
                <label>ARTISTA</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>ASEO/LIMPIEZA</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>AUDITOR (A)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>