force-app/main/default/objects/Account/fields/Promocionales_1__c.field-meta.xml
<CustomField>
    <fullName>Promocionales_1__c</fullName>
    <label>Promocionales 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Promocionales</valueSetName>
    </valueSet>
</CustomField>