force-app/main/default/objects/Account/fields/Promocionales__c.field-meta.xml
<CustomField>
    <fullName>Promocionales__c</fullName>
    <label>Promocionales</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Botes</fullName>
            </value>
            <value>
                <fullName>Lápices</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>