force-app/main/default/objects/Account/fields/Referido_por__c.field-meta.xml
<CustomField>
    <fullName>Referido_por__c</fullName>
    <label>Referido por</label>
    <length>255</length>
    <type>Text</type>
</CustomField>