force-app/main/default/objects/Account/fields/Riesgo_Profecional_Patronal__c.field-meta.xml
<CustomField>
    <fullName>Riesgo_Profecional_Patronal__c</fullName>
    <label>Riesgo Profesional Patronal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>