force-app/main/default/objects/Account/fields/RTN_Empresa__c.field-meta.xml
<CustomField>
    <fullName>RTN_Empresa__c</fullName>
    <label>RTN Empresa</label>
    <length>20</length>
    <type>Text</type>
</CustomField>