force-app/main/default/objects/Account/fields/Rubro__c.field-meta.xml
<CustomField>
    <fullName>Rubro__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Rubro</label>
    <referenceTo>Rubro__c</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>