force-app/main/default/objects/Account/fields/Salario_Base_Pilar_Complementario__c.field-meta.xml
<CustomField>
    <fullName>Salario_Base_Pilar_Complementario__c</fullName>
    <label>Salario Base Pilar Complementario</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>