force-app/main/default/objects/Account/fields/Salario_Base_Reserva_Laboral__c.field-meta.xml
<CustomField>
    <fullName>Salario_Base_Reserva_Laboral__c</fullName>
    <label>Techo Reserva Laboral</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>