force-app/main/default/objects/Account/fields/Salario_Base_Seguro_Social_RP__c.field-meta.xml
<CustomField>
    <fullName>Salario_Base_Seguro_Social_RP__c</fullName>
    <description>Salario Base Seguro Social Riesgo Profecional</description>
    <inlineHelpText>Salario Base Seguro Social Riesgo Profecional</inlineHelpText>
    <label>Salario Base Seguro Social RP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>