force-app/main/default/objects/Account/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <label>Objeto Social/Actividad Economica</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>270</fullName>
                <label>ABASTECIMIENTO DE EVENTOS</label>
            </value>
            <value>
                <fullName>73</fullName>
                <label>ACABADO DE PRODUCTOS TEXTILES</label>
            </value>
            <value>
                <fullName>314</fullName>
                <label>ACT. DE ADMINISTRACION DE FONDOS</label>
            </value>
            <value>
                <fullName>294</fullName>
                <label>ACT. DE AGENCIAS DE NOTICIAS</label>
            </value>
            <value>
                <fullName>267</fullName>
                <label>ACT. DE ALOJAMIENTO DE CORTO PLAZO</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>ACT. DE APOYO A LA GANADERIA</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>ACT. DE APOYO A LOS CULTIVOS</label>
            </value>
            <value>
                <fullName>390</fullName>
                <label>ACT. DE BIBLIOTECAS Y ARCHIVOS</label>
            </value>
            <value>
                <fullName>395</fullName>
                <label>ACT. DE CLUBES DEPORTIVOS</label>
            </value>
            <value>
                <fullName>379</fullName>
                <label>ACT. DE HOSPITALES</label>
            </value>
            <value>
                <fullName>92</fullName>
                <label>ACT. DE IMPRESION</label>
            </value>
            <value>
                <fullName>349</fullName>
                <label>ACT. DE INVESTIGACION.</label>
            </value>
            <value>
                <fullName>340</fullName>
                <label>ACT. DE LAS AGENCIAS DE EMPLEO</label>
            </value>
            <value>
                <fullName>356</fullName>
                <label>ACT. DE LAS CENTRALES DE LLAMADAS.</label>
            </value>
            <value>
                <fullName>380</fullName>
                <label>ACT. DE MEDICOS Y ODONTOLOGOS</label>
            </value>
            <value>
                <fullName>403</fullName>
                <label>ACT. DE ORGANIZACIONES POLITICAS</label>
            </value>
            <value>
                <fullName>402</fullName>
                <label>ACT. DE ORGANIZACIONES RELIGIOSAS</label>
            </value>
            <value>
                <fullName>404</fullName>
                <label>ACT. DE OTRAS ASOCIACIONES NCP</label>
            </value>
            <value>
                <fullName>290</fullName>
                <label>ACT. DE PROGRAMACION INFORMATICA</label>
            </value>
            <value>
                <fullName>281</fullName>
                <label>ACT. DE PROYECCION DE PELICULAS</label>
            </value>
            <value>
                <fullName>329</fullName>
                <label>ACT. ESPECIALIZADAS DE DISEÑO</label>
            </value>
            <value>
                <fullName>320</fullName>
                <label>ACT. JURIDICAS.</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>ACT. POSTERIOR A LA COSECHA</label>
            </value>
            <value>
                <fullName>347</fullName>
                <label>ACT. PRIVADAS DE SEGURIDAD.</label>
            </value>
            <value>
                <fullName>332</fullName>
                <label>ACT. VETERINARIAS</label>
            </value>
            <value>
                <fullName>322</fullName>
                <label>ACT ADMIN EMPRESAS Y CONSULTORIA</label>
            </value>
            <value>
                <fullName>362</fullName>
                <label>ACT ADMINISTRACION PUBLICA GENERAL</label>
            </value>
            <value>
                <fullName>358</fullName>
                <label>ACT AGENCIAS COBRO/OFICINAS CREDITO</label>
            </value>
            <value>
                <fullName>312</fullName>
                <label>ACT AGENTES Y CORREDORES DE SEGURO</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>ACT APOYO EXPL OTRAS MINAS/CANTERAS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>