force-app/main/default/objects/Account/fields/sector_n__c.field-meta.xml
<CustomField>
    <fullName>sector_n__c</fullName>
    <label>sector_n</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>11</fullName>
                <label>Comercial</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Comunicación</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Construcción</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>de la Administración</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Desarrollo</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Educativo</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Energetico</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Financiero</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Forestal</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Ganadero</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>General</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Industrial</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Información</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>Innovación</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>Investigación</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Minero</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Pesquero</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Sanitario</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>Sin Fines de Lucro</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Transporte</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Turistico</label>
            </value>
            <value>
                <fullName>271</fullName>
                <label>OTRA ACT DEL SERVICIO ALIMENTACION</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>