force-app/main/default/objects/Account/fields/Segmento__c.field-meta.xml
<CustomField>
    <fullName>Segmento__c</fullName>
    <label>Segmento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>AFLUENTE</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>MASIVO</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>POTENCIAL A</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>POTENCIAL B</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>PREMIER</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>