force-app/main/default/objects/Account/fields/Segundo_Apellido_Representante__c.field-meta.xml
<CustomField>
    <fullName>Segundo_Apellido_Representante__c</fullName>
    <label>Segundo Apellido Representante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>