force-app/main/default/objects/Account/fields/Segundo_Nombre_Representante__c.field-meta.xml
<CustomField>
    <fullName>Segundo_Nombre_Representante__c</fullName>
    <label>Segundo Nombre Representante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>