force-app/main/default/objects/Account/fields/Telefono1__c.field-meta.xml
<CustomField>
    <fullName>Telefono1__c</fullName>
    <label>1. Teléfono</label>
    <type>Phone</type>
</CustomField>