force-app/main/default/objects/Account/fields/Telefono2__c.field-meta.xml
<CustomField>
    <fullName>Telefono2__c</fullName>
    <label>2. Teléfono</label>
    <type>Phone</type>
</CustomField>