force-app/main/default/objects/Account/fields/Telefono_actual__c.field-meta.xml
<CustomField>
    <fullName>Telefono_actual__c</fullName>
    <label>Teléfono actual</label>
    <type>Phone</type>
</CustomField>