force-app/main/default/objects/Account/fields/Telefono_Casa_Representante__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Casa_Representante__c</fullName>
    <label>Teléfono Casa Representante</label>
    <type>Phone</type>
</CustomField>