force-app/main/default/objects/Account/fields/Telefono_Celular_Representante__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Celular_Representante__c</fullName>
    <label>Teléfono Celular Representante</label>
    <type>Phone</type>
</CustomField>