force-app/main/default/objects/Account/fields/Telefono_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Empresa__c</fullName>
    <label>Teléfono</label>
    <type>Phone</type>
</CustomField>