force-app/main/default/objects/Account/fields/Telefono_Oficina__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Oficina__c</fullName>
    <label>Telefono Oficina</label>
    <type>Phone</type>
</CustomField>