force-app/main/default/objects/Account/fields/Telefono_Oficina_Representante__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Oficina_Representante__c</fullName>
    <label>Teléfono Oficina Representante</label>
    <type>Phone</type>
</CustomField>