force-app/main/default/objects/Account/fields/Telefono_Ubicacion__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Ubicacion__c</fullName>
    <label>Telefono Ubicacion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
                <label>CASA</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>TRABAJO</label>
            </value>
            <value>
                <fullName>O</fullName>
                <isActive>false</isActive>
                <label>O</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>