force-app/main/default/objects/Account/fields/Tipo_admon__c.field-meta.xml
<CustomField>
    <fullName>Tipo_admon__c</fullName>
    <label>Tipo_admon</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <label>PRIVADA</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>PUBLICA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>