force-app/main/default/objects/Account/fields/Tipo_Aporte__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Aporte__c</fullName>
    <description>Tipo de aporte puede ser F = Fijo o P = Procentual</description>
    <label>Tipo Aporte</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>F</fullName>
                <label>Fijo</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Porcentual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>