force-app/main/default/objects/Account/fields/Tipo_Beneficiario__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Beneficiario__c</fullName>
    <label>Tipo Beneficiario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>D</fullName>
                <label>Directo</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Contingencia</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>