force-app/main/default/objects/Account/fields/Tipo_de_Administracion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Administracion__c</fullName>
    <label>Tipo de Administración</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PRIVADA</fullName>
            </value>
            <value>
                <fullName>PUBLICA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>