force-app/main/default/objects/Account/fields/Tipo_de_Producto__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Producto__c</fullName>
    <label>Tipo de Producto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CONTRIBUTIVO</fullName>
            </value>
            <value>
                <fullName>NO CONTRIBUTIVO</fullName>
            </value>
            <value>
                <fullName>CESANTIAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>