force-app/main/default/objects/Account/fields/Tipo_Direccion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Direccion__c</fullName>
    <label>Tipo Direccion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>T</fullName>
                <label>TRABAJO</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>DOMICILIO</label>
            </value>
            <value>
                <fullName>R</fullName>
                <isActive>false</isActive>
                <label>R</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>