force-app/main/default/objects/Account/fields/Tipo_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Empresa__c</fullName>
    <label>Tipo Empresa</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
                <label>Publica</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>Privada</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>