force-app/main/default/objects/Account/fields/TIPO_ENTIDAD_FATCA__c.field-meta.xml
<CustomField>
    <fullName>TIPO_ENTIDAD_FATCA__c</fullName>
    <description>TIPO ENTIDAD PARA FATCA JURIDICO</description>
    <label>TIPO ENTIDAD FATCA JURI|</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Persona Jurídica sin Dueños Sustanciales de EEUU.</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Persona Jurídica con Dueños Sustanciales de EEUU.</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Persona Jurídica de EEUU Especificada.</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Pass Through</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Disregarded</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>