force-app/main/default/objects/Account/fields/Tipo_EnvioNuevo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_EnvioNuevo__c</fullName>
    <label>Tipo Envio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E</fullName>
                <label>Correo Electrónico</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>Dirección</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Oficina</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Residencia</label>
            </value>
            <value>
                <fullName>M</fullName>
                <isActive>false</isActive>
                <label>SMS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>