force-app/main/default/objects/Account/fields/Tipo_Identificacion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Identificacion__c</fullName>
    <label>Tipo Identificación</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>CARNET DE RESIDENTE</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>CEDULA DE IDENTIDAD</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>RTN</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>PASAPORTE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>