force-app/main/default/objects/Account/fields/Tipo_Moneda__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Moneda__c</fullName>
    <label>Tipo Moneda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Lempiras</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Dólares</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Euros</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>