force-app/main/default/objects/Account/fields/Tipo_MonedaN__c.field-meta.xml
<CustomField>
    <fullName>Tipo_MonedaN__c</fullName>
    <label>Tipo MonedaN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Lempiras</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Dolares</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>