force-app/main/default/objects/Account/fields/Tipo_Nivel_Socios__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Nivel_Socios__c</fullName>
    <label>Tipo Nivel Socios</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Nivel 1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Nivel 2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Nivel 3</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Nivel 4</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Nivel 5</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Nivel 6</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Nivel 7</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Nivel 8</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Nivel 9</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Nivel 10</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Nivel 11</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Nivel 12</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Nivel 13</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Nivel 14</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Nivel 15</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>