force-app/main/default/objects/Account/fields/Tipo_Persona__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Persona__c</fullName>
    <label>Tipo Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Persona Natural</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Persona Jurídica</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>